<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_adr"></ImageView>

    <TextView
        style="@style/text_center_style"
        android:layout_marginTop="20dp"
        android:text="@string/select_municipality"></TextView>


    <ProgressBar
        android:id="@+id/progess"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center" />


    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView

            style="@style/text_center_style"
            android:gravity="left"
            android:text="@string/department" />

        <Spinner
            android:id="@+id/departments_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:prompt="@string/department" />


        <TextView
            style="@style/text_center_style"
            android:gravity="left"
            android:text="@string/municipality" />

        <Spinner
            android:id="@+id/municipalities_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:prompt="@string/department" />


        <com.github.nikartm.button.FitButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="32dp"
            android:enabled="true"
            android:gravity="center_vertical"
            app:fb_backgroundColor="@color/colorPrimary"
            app:fb_cornerRadius="2dp"
            app:fb_divColor="#fff"
            app:fb_divHeight="40dp"
            app:fb_divWidth="1dp"
            app:fb_icon="@drawable/ic_thumb_up"
            app:fb_iconColor="#FFF"
            app:fb_iconHeight="28dp"
            app:fb_iconMarginEnd="16dp"
            app:fb_iconMarginStart="20dp"
            app:fb_iconPosition="left"
            app:fb_iconWidth="28dp"
            app:fb_rippleColor="#FBE9E7"
            app:fb_shape="rectangle"
            app:fb_text="@string/next_button"
            app:fb_textColor="#FFF"
            app:fb_textPaddingStart="16dp" />

    </LinearLayout>





</LinearLayout>